--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
+project (Nectere)
 
-project ("Nectere")
+set(CMAKE_CXX_STANDARD 17)
 
 # Include sub-projects.
-add_subdirectory ("DataParser")
-add_subdirectory ("Nectere")
+add_subdirectory (DataParser)
+add_subdirectory (Nectere)
