--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project (Nectere)
 set(CMAKE_CXX_STANDARD 17)
 
 # Include sub-projects.
-add_subdirectory (DataParser)
-add_subdirectory (Nectere)
+add_subdirectory(DataParser)
+add_subdirectory(Nectere)
+add_subdirectory(NectereClientTest)
