--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.19)
 project (Nectere)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Include sub-projects.
-add_subdirectory(DataParser)
 add_subdirectory(Nectere)
 add_subdirectory(NectereClientTest)
+add_subdirectory(NectereDiscord)
