[EDIT][ADD] Rework of loading system for application and fix of DataParser
- Rework of application loading system
- Improvement of Dp::Node to better handle array injection
- Start of two new commands: ReloadApp and Unload App

--- a/Nectere/Command/CMakeLists.txt
+++ b/Nectere/Command/CMakeLists.txt
@@ -8,8 +8,12 @@ set(COMMAND_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/CommandListCommand.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/CommandListCommand.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/NectereEventCode.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ReloadAppCommand.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ReloadAppCommand.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/StopCommand.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/StopCommand.hpp)
+	${CMAKE_CURRENT_SOURCE_DIR}/StopCommand.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/UnloadAppCommand.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/UnloadAppCommand.hpp)
 	
 add_library(${NAME}-command ${COMMAND_SOURCES})
 target_link_libraries(${NAME}-command ${NAME}-network ${NAME}-dp)
