--- a/Nectere/Dp/CMakeLists.txt
+++ b/Nectere/Dp/CMakeLists.txt
@@ -8,6 +8,7 @@ set(DP_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/Node.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/Result.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/Result.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Serializer.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/Serializer.hpp
 	${CMAKE_CURRENT_SOURCE_DIR}/Xml.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/Xml.hpp)
